# fastapi-todo

./: .env  Dockerfile  docker-compose.yaml  guinicorn_conf.py  pyproject.toml  requirements.txt  test_jwt.py  test_redis.py
learning/: README.md  auth_dependencies.md  auth_routes_auth.md  auth_services_auth.md  db.md  how_to_add_completion_time_and_reminders.md  how_to_add_redis.md  jwt.md  redis_implementation_examples.md  todo_routes_todo.md  todo_schema.md  todo_services_todo.md
scripts/: generate_test_module.py
src/: config.py  main.py
src/auth/: schema.py
src/auth/routes/: auth.py
src/auth/services/: auth.py  dependencies.py
src/todo/: schema.py
src/todo/routes/: todo.py
src/todo/services/: todo.py
src/utils/: db.py  emails.py  jwt.py  logger.py  rate_limiter.py  redis_client.py  reminder_scheduler.py
